Refactored VanillaZipBenchmark