@@ -1,19 +1,21 @@
 package com.github.tiniyield.sequences.benchmarks.zip;
 
-import com.github.tiniyield.sequences.benchmarks.operations.model.artist.Artist;
-import com.github.tiniyield.sequences.benchmarks.operations.model.country.Country;
-import com.github.tiniyield.sequences.benchmarks.operations.model.track.Track;
+import com.github.tiniyield.sequences.benchmarks.kt.zip.ZipPrimesWithValuesKt;
 import com.github.tiniyield.sequences.benchmarks.operations.model.wrapper.Value;
-import kotlin.sequences.SequencesKt;
+import one.util.streamex.StreamEx;
 import org.javatuples.Pair;
-import org.javatuples.Triplet;
+import org.jayield.Query;
+import org.jooq.lambda.Seq;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static org.testng.Assert.*;
+import static kotlin.collections.ArraysKt.asSequence;
+import static kotlin.sequences.SequencesKt.toList;
+import static org.testng.Assert.assertTrue;
 
 public class VanillaZipBenchmarkTest {
 
@@ -28,16 +30,16 @@ public class VanillaZipBenchmarkTest {
 
     @Test
     public void testSameResultsVanillaZip() {
-        List<Pair<Integer, Value>>  stream = instance.getStream().collect(Collectors.toList());
-        List<Pair<Integer, Value>>  streamEx = instance.getStreamEx().toList();
-        List<Pair<Integer, Value>>  query = instance.getQuery().toList();
-        List<Pair<Integer, Value>>  jool = instance.getJool().toList();
-        List<Pair<Integer, Value>>  vavr = instance.getVavr().toJavaList();
-        List<Pair<Integer, Value>>  protonpack = instance.getProtonpack().collect(Collectors.toList());
-        List<Pair<Integer, Value>>  guava = instance.getGuava().collect(Collectors.toList());
-        List<Pair<Integer, Value>>  kotlin = SequencesKt.toList(instance.getKotlin());
-        List<Pair<Integer, Value>>  jKotlin = SequencesKt.toList(instance.getJKotlin());
-        List<Pair<Integer, Value>>  zipline = instance.getZipline().collect(Collectors.toList());
+        List<Pair<Integer, Value>> stream = instance.zipPrimeWithValue(Arrays.stream(instance.numbers), Arrays.stream(instance.values)).collect(Collectors.toList());
+        List<Pair<Integer, Value>> streamEx = instance.zipPrimeWithValue(StreamEx.of(instance.numbers), StreamEx.of(instance.values)).toList();
+        List<Pair<Integer, Value>> query = instance.zipPrimeWithValue(Query.of(instance.numbers), Query.of(instance.values)).toList();
+        List<Pair<Integer, Value>> jool = instance.zipPrimeWithValue(Seq.of(instance.numbers), Seq.of(instance.values)).toList();
+        List<Pair<Integer, Value>> vavr = instance.zipPrimeWithValue(io.vavr.collection.Stream.of(instance.numbers), io.vavr.collection.Stream.of(instance.values)).toJavaList();
+        List<Pair<Integer, Value>> protonpack = instance.zipPrimeWithValueProtonpack(Arrays.stream(instance.numbers), Arrays.stream(instance.values)).collect(Collectors.toList());
+        List<Pair<Integer, Value>> guava = instance.zipPrimeWithValueGuava(Arrays.stream(instance.numbers), Arrays.stream(instance.values)).collect(Collectors.toList());
+        List<Pair<Integer, Value>> kotlin = toList(ZipPrimesWithValuesKt.zipPrimeWithValue(asSequence(instance.numbers), asSequence(instance.values)));
+        List<Pair<Integer, Value>> jKotlin = toList(instance.zipPrimeWithValue(asSequence(instance.numbers), asSequence(instance.values)));
+        List<Pair<Integer, Value>> zipline = instance.zipPrimeWithValueZipline(Arrays.stream(instance.numbers), Arrays.stream(instance.values)).collect(Collectors.toList());
 
         assertTrue(stream.size() == streamEx.size() && stream.containsAll(streamEx) && streamEx.containsAll(stream));
         assertTrue(stream.size() == query.size() && stream.containsAll(query) && query.containsAll(stream));
